src/test/resources/de/uni_luebeck/isp/tessla/core/errors/infinite/mutual-infinite-recursion-with-operators-nostreams.tessla
def x: Int := y + 1
def y: Int := x * 2
out x
